chore: lang version to 11 (#12)