@@ -1,12 +1,20 @@
 package s2.types;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-public record SequencedRecordBatch(List<SequencedRecord> records) implements MeteredBytes {
+public class SequencedRecordBatch implements MeteredBytes {
+  public final List<SequencedRecord> records;
+
+  SequencedRecordBatch(List<SequencedRecord> records) {
+    this.records = records;
+  }
 
   public static SequencedRecordBatch fromProto(s2.v1alpha.SequencedRecordBatch batch) {
     return new SequencedRecordBatch(
-        batch.getRecordsList().stream().map(SequencedRecord::fromProto).toList());
+        batch.getRecordsList().stream()
+            .map(SequencedRecord::fromProto)
+            .collect(Collectors.toList()));
   }
 
   @Override
